creando create de control asistencia

--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -272,6 +272,7 @@
     <Content Include="Views\ControlAsistencia\Index.cshtml" />
     <Content Include="Views\Empleado\Index.cshtml" />
     <Content Include="Views\Cargo\Create.cshtml" />
+    <Content Include="Views\ControlAsistencia\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
