Create de departamentos

--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -273,6 +273,7 @@
     <Content Include="Views\Empleado\Index.cshtml" />
     <Content Include="Views\Cargo\Create.cshtml" />
     <Content Include="Views\ControlAsistencia\Create.cshtml" />
+    <Content Include="Views\Departamento\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
