--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -276,6 +276,7 @@
     <Content Include="Views\Departamento\Create.cshtml" />
     <Content Include="Views\Empleado\Create.cshtml" />
     <Content Include="Views\TipoEmpleado\Create.cshtml" />
+    <Content Include="Views\Turno\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
