details control_asistencia

--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -278,6 +278,7 @@
     <Content Include="Views\TipoEmpleado\Create.cshtml" />
     <Content Include="Views\Turno\Create.cshtml" />
     <Content Include="Views\Cargo\Details.cshtml" />
+    <Content Include="Views\ControlAsistencia\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
