details tipo_empleado

--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -281,6 +281,7 @@
     <Content Include="Views\ControlAsistencia\Details.cshtml" />
     <Content Include="Views\Departamento\Details.cshtml" />
     <Content Include="Views\Empleado\Details.cshtml" />
+    <Content Include="Views\TipoEmpleado\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
