--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -284,6 +284,7 @@
     <Content Include="Views\TipoEmpleado\Details.cshtml" />
     <Content Include="Views\Turno\Details.cshtml" />
     <Content Include="Views\Cargo\Edit.cshtml" />
+    <Content Include="Views\ControlAsistencia\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
