--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -286,6 +286,7 @@
     <Content Include="Views\Cargo\Edit.cshtml" />
     <Content Include="Views\ControlAsistencia\Edit.cshtml" />
     <Content Include="Views\Departamento\Edit.cshtml" />
+    <Content Include="Views\Empleado\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
