--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -288,6 +288,7 @@
     <Content Include="Views\Departamento\Edit.cshtml" />
     <Content Include="Views\Empleado\Edit.cshtml" />
     <Content Include="Views\TipoEmpleado\Edit.cshtml" />
+    <Content Include="Views\Turno\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
