--- a/Control_asistencia_mvc/Control_asistencia_mvc.csproj
+++ b/Control_asistencia_mvc/Control_asistencia_mvc.csproj
@@ -294,6 +294,7 @@
     <Content Include="Views\Departamento\Delete.cshtml" />
     <Content Include="Views\Empleado\Delete.cshtml" />
     <Content Include="Views\TipoEmpleado\Delete.cshtml" />
+    <Content Include="Views\Turno\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
